@@ -1,7 +1,7 @@
 {
   "assets/images/favicon.ico": "assets/images/favicon-e565ddfa3b.ico",
   "assets/javascripts/application.js": "assets/javascripts/application-997097ee0c.js",
-  "assets/javascripts/modernizr.js": "assets/javascripts/modernizr-d41d8cd98f.js",
+  "assets/javascripts/modernizr.js": "assets/javascripts/modernizr-4ab42b99fd.js",
   "assets/stylesheets/application.css": "assets/stylesheets/application-f851d964d4.css",
   "assets/stylesheets/palettes.css": "assets/stylesheets/palettes-05ab2406df.css"
 }
